	ITS#10222 - Update mdb_dump(1) and mdb_load(1) man pages for append (-a) option
	ITS#10275 - mdb_load: add -Q option to use NOSYNC
	ITS#10296 - fix fdatasync on MacOS
	ITS#10342 - fix memleak in mdb_txn_begin for nested txns
	ITS#10346 - fix mdb_env_copy2 with values > (2GB-16)
	ITS#10355 - fix mplay build on musl
	ITS#10396 - fix mdb_cursor_del0 with multiple DUPSORT cursors

LMDB 0.9.33 Release (2024/05/21)
	ITS#9037 mdb_page_search: fix error code when DBI record is missing
	ITS#10198 For win32, stop passing ignored parameter
	ITS#10212 Fix meta page usage by read only tools

LMDB 0.9.32 Release (2024/01/29)
	ITS#9378 - Add ability to replay log and replay log tool
	ITS#10095 - partial revert of ITS#9278. The patch was incorrect and introduced numerous race conditions.
	ITS#10125 - mdb_load: fix cursor reinit in Append mode
	ITS#10137 - Allow users to define MDB_IDL_LOGN

LMDB 0.9.31 Release (2023/07/10)
	ITS#8447 - Fix cursor_put(MDB_CURRENT) on DUPSORT DB with different sized data

LMDB 0.9.30 Release (2023/02/08)
	ITS#9806 - LMDB page_split: key threshold depends on page size
	ITS#9916 - avoid gcc optimization bug on sparc64 linux
	ITS#9919 - Mark infrequently used functions as cold
	ITS#9723 - clear C_EOF on cursor with MDB_FIRST_DUP
	ITS#9030 - Use sys/cachectl.h rather than asm/cachectl.h on mips

LMDB 0.9.29 Release (2021/03/16)
	ITS#9461 refix ITS#9376
	ITS#9500 fix regression from ITS#8662

LMDB 0.9.28 Release (2021/02/04)
	ITS#8662 add -a append option to mdb_load

LMDB 0.9.27 Release (2020/10/26)
	ITS#9376 fix repeated DUPSORT cursor deletes

LMDB 0.9.26 Release (2020/08/11)
	ITS#9278 fix robust mutex cleanup for FreeBSD

LMDB 0.9.25 Release (2020/01/30)
	ITS#9068 fix mdb_dump/load backslashes in printable content
	ITS#9118 add MAP_NOSYNC for FreeBSD
	ITS#9155 free mt_spill_pgs in non-nested txn on end

LMDB 0.9.24 Release (2019/07/24)
	ITS#8969 Tweak mdb_page_split
	ITS#8975 WIN32 fix writemap set_mapsize crash
	ITS#9007 Fix loose pages in WRITEMAP
